; ModuleID = '/home/carl/AnghaBench/phpredis/extr_cluster_library.c_slot_range_list_clone.c'
source_filename = "/home/carl/AnghaBench/phpredis/extr_cluster_library.c_slot_range_list_clone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i64*)* @slot_range_list_clone to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @slot_range_list_clone(i32* %0, i64* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64* %1, i64** %4, align 8
  store i64 0, i64* %7, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i64 @zend_llist_count(i32* %8)
  %10 = load i64*, i64** %4, align 8
  store i64 %9, i64* %10, align 8
  %11 = load i64*, i64** %4, align 8
  %12 = load i64, i64* %11, align 8
  %13 = mul i64 %12, 4
  %14 = call i32* @pemalloc(i64 %13, i32 1)
  store i32* %14, i32** %5, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = call i32* @zend_llist_get_first(i32* %15)
  store i32* %16, i32** %6, align 8
  br label %17

17:                                               ; preds = %20, %2
  %18 = load i32*, i32** %6, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %29

20:                                               ; preds = %17
  %21 = load i32*, i32** %5, align 8
  %22 = load i64, i64* %7, align 8
  %23 = add i64 %22, 1
  store i64 %23, i64* %7, align 8
  %24 = getelementptr inbounds i32, i32* %21, i64 %22
  %25 = load i32*, i32** %6, align 8
  %26 = call i32 @memcpy(i32* %24, i32* %25, i32 4)
  %27 = load i32*, i32** %3, align 8
  %28 = call i32* @zend_llist_get_next(i32* %27)
  store i32* %28, i32** %6, align 8
  br label %17

29:                                               ; preds = %17
  %30 = load i32*, i32** %5, align 8
  ret i32* %30
}

declare dso_local i64 @zend_llist_count(i32*) #1

declare dso_local i32* @pemalloc(i64, i32) #1

declare dso_local i32* @zend_llist_get_first(i32*) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32* @zend_llist_get_next(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
